<resources>
    <string name="app_name">Nibbles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="hi_andrew">Hi, Andrew</string>
    <string name="food_special_for_you">Food Special For You</string>
    <string name="category">category</string>
    <string name="more">More</string>
    <string name="snack">Snack</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="favourite">Favourite</string>
    <string name="my_order">My Order,</string>
    <string name="total_amount">Total amount</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="free_delivery">Free delivery</string>
</resources>