<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_24">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cart"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hi"
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/hi_andrew"
            android:textSize="@dimen/big_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_menu" />

        <TextView
            android:id="@+id/tv_food_special"
            style="@style/TextStyle"
            android:text="@string/food_special_for_you"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hi" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/bg_grey_rectangle"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@id/img_set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_food_special"
            app:queryHint="@string/search" />

        <ImageView
            android:id="@+id/img_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_rectangle"
            android:contentDescription="@string/cart"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_graphic_eq_24"
            app:layout_constraintBottom_toBottomOf="@id/search_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_view" />

        <TextView
            android:id="@+id/tv_categories"
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/categories"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_categories"
            tools:listitem="@layout/list_item_category" />

        <TextView
            android:id="@+id/tv_most_popular"
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/most_popular"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nibbles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_most_popular"
            tools:listitem="@layout/list_item_nibble" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>