<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".NibbleDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cart"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_nibble_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/snack"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/img_back" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/img_nibble_image"
            app:layout_constraintTop_toTopOf="@id/img_nibble_image"
            app:layout_constraintVertical_bias="0.9" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_white_card"
            android:elevation="@dimen/margin_8"
            android:padding="@dimen/margin_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider">

            <TextView
                android:id="@+id/tv_nibble_name"
                style="@style/TextStyle"
                android:layout_marginTop="@dimen/margin_8"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:numStars="5"
                android:rating="4"
                app:layout_constraintStart_toStartOf="@id/tv_nibble_name"
                app:layout_constraintTop_toBottomOf="@id/tv_nibble_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroked_white_rec"
                android:contentDescription="@string/favourite"
                android:padding="@dimen/margin_8"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_nibble_name" />

            <TextView
                android:id="@+id/tv_nibble_description"
                style="@style/TextStyle"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="@id/tv_nibble_name"
                app:layout_constraintTop_toBottomOf="@id/rating_bar" />

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_stroked_white_rec"
                android:contentDescription="@string/add"
                android:padding="@dimen/margin_4"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintStart_toStartOf="@id/tv_nibble_name"
                app:layout_constraintTop_toBottomOf="@id/tv_nibble_description" />

            <TextView
                android:id="@+id/tv_quantity"
                style="@style/TextStyle"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:textSize="@dimen/normal_text"
                app:layout_constraintBottom_toBottomOf="@id/img_add"
                app:layout_constraintStart_toEndOf="@id/img_add"
                app:layout_constraintTop_toTopOf="@id/img_add" />

            <ImageView
                android:id="@+id/img_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_stroked_white_rec"
                android:contentDescription="@string/remove"
                android:padding="@dimen/margin_4"
                android:src="@drawable/ic_baseline_remove_24"
                app:layout_constraintStart_toEndOf="@id/tv_quantity"
                app:layout_constraintTop_toBottomOf="@id/tv_nibble_description" />

            <TextView
                android:id="@+id/tv_nibble_amount"
                style="@style/TextStyle"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_add" />

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginVertical="@dimen/margin_24"
                android:text="@string/add_to_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_add" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>