<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4"
    android:background="@drawable/bg_grey_rectangle"
    android:padding="@dimen/margin_16">

    <ImageView
        android:id="@+id/img_nibble_image"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:contentDescription="@string/category"
        android:scaleType="centerCrop"
        android:src="@drawable/cheese_burger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nibble_name"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_24"
        android:text="Chicken Burger"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toStartOf="@id/tv_nibble_amount"
        app:layout_constraintStart_toEndOf="@id/img_nibble_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/bg_stroked_white_rec"
        android:contentDescription="@string/add"
        android:padding="@dimen/margin_4"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toStartOf="@id/tv_nibble_name"
        app:layout_constraintTop_toBottomOf="@id/tv_nibble_name" />

    <TextView
        android:id="@+id/tv_quantity"
        style="@style/TextStyle"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@id/img_add"
        app:layout_constraintStart_toEndOf="@id/img_add"
        app:layout_constraintTop_toTopOf="@id/img_add" />

    <ImageView
        android:id="@+id/img_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@drawable/bg_stroked_white_rec"
        android:contentDescription="@string/remove"
        android:padding="@dimen/margin_4"
        android:src="@drawable/ic_baseline_remove_24"
        app:layout_constraintStart_toEndOf="@id/tv_quantity"
        app:layout_constraintTop_toTopOf="@id/img_add" />

    <TextView
        android:id="@+id/tv_nibble_amount"
        style="@style/TextStyle"
        android:text="$ 16.00"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>